--- a/login.html
+++ b/login.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dompetku - Login</title>
     <link rel="stylesheet" href="login.css">
-</head>
 <body>
     <div class="container">
         <header>
@@ -16,8 +15,8 @@
                 <h2>DOMPETKU</h2>
                 <form action="#" method="POST">
                     <label for="email">Login</label>
-                    <input type="email" id="email" name="email" placeholder="Email">
-                    <input type="password" id="password" name="password" placeholder="Password">
+                    <input type="email" id="email" name="email" placeholder="Email" required>
+                    <input type="password" id="password" name="password" placeholder="Password" required>
                     <div class="forgot-password">
                         <a href="#">Forgot Password?</a>
                     </div>
@@ -25,6 +24,22 @@
                 </form>
             </div>
         </main>
+        <div class="toast" id="toast">Login Success!</div>
     </div>
+    <script>
+        document.querySelector('form').addEventListener('submit', function(event) {
+            event.preventDefault(); // Prevent actual form submission for demo purposes
+            // Here you can handle login logic (e.g., AJAX request)
+
+            // Show toast notification
+            const toast = document.getElementById('toast');
+            toast.classList.add('show');
+            
+            // Remove the toast after 3 seconds
+            setTimeout(() => {
+                toast.classList.remove('show');
+            }, 3000);
+        });
+    </script>
 </body>
 </html>
